--- a/AnalisesClinicas/assets/style.css
+++ b/AnalisesClinicas/assets/style.css
@@ -12,7 +12,7 @@ body {
 	justify-content: center;
 	margin: auto;
 	flex: 0;
-	background-color: blue;
+	background-color: #0099CC;
 	padding-top: 0px;
 
 }
@@ -28,6 +28,7 @@ body {
 	margin-top: 0px;
 	flex: 0;
 	color: white;
+
 }
 hr {
 	width: 100%;
@@ -37,7 +38,7 @@ hr {
 	flex: 0;
 }
 .formulario {
-	width: 1024px;
+	width: 100%;
 	display: flex;
 	flex: 1;
 	margin:auto;
@@ -45,6 +46,31 @@ hr {
 	margin-top: 50px;
 }
 form input {
-	border-radius: 10px;
+	border-radius: 20px;
 	font-size: 18px;
+	outline: none;
+	padding-left: 10px;
+	justify-content: center;
 }
+
+#log{
+	padding: 7px;
+}
+#confirmar{
+	padding: 10px;
+	padding-right: 45px;
+	padding-left: 45px;
+	color: white;
+	background-color: #0099CC;
+	margin-left: 30px;
+	margin-right: 30px;
+	
+
+}
+footer {
+	display: flex;
+	justify-content: center;
+	padding-top: 90px;
+	font-size: 10px;
+}
+
